tests/Fixtures/views/errors/runtime_simple.tpl
<h1>Simple runtime error</h1>
<p>{$user->getAuthIdentifier()}</p>
